--- a/datainput.ui
+++ b/datainput.ui
@@ -722,6 +722,9 @@ border:none; </string>
      <property name="text">
       <string>This work is based on material supported by the National Science Foundation under grant 1612843-2 </string>
      </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
     </widget>
     <widget class="QLabel" name="label_40">
      <property name="geometry">
@@ -1062,7 +1065,7 @@ border:none; </string>
      <string notr="true">background-color: #B0BEC5</string>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;  DAKOTA Uncertainty Quantification Application &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:18pt;&quot;&gt;DAKOTA-FEM Uncertainty Quantification Application &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="chooseFile">
@@ -1697,6 +1700,37 @@ border:none; </string>
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_42">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>590</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string># samples</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="numSamples">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>610</y>
+      <width>106</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Roboto</family>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 5px;</string>
+    </property>
+   </widget>
    <zorder>chooseFile</zorder>
    <zorder>filePath</zorder>
    <zorder>pushButton_3</zorder>
@@ -1783,6 +1817,8 @@ border:none; </string>
    <zorder>label_37</zorder>
    <zorder>label</zorder>
    <zorder>label_41</zorder>
+   <zorder>label_42</zorder>
+   <zorder>numSamples</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
